--- a/index.html
+++ b/index.html
@@ -2749,7 +2749,7 @@ grid-template-columns: 1fr;
 justify-content: center;
 justify-items: center;
 background: #fffefee0;
-font-family: 'Merienda';
+font-family: 'Kanit';
 font-size: 12.5px;
 box-shadow: 2px 3px 0.5rem 1px rgba(34, 34, 169, 0.796);
 border: 1.5px solid rgba(77, 77, 84, 0.796);
@@ -2757,7 +2757,7 @@ border-radius: 0.5rem;
 width: 140px;
 height: 60px;
 padding: 15px;
-color: rgb(38, 38, 132);
+color: rgb(18, 18, 105);
 cursor: pointer;
         }
         .FASO:hover{
@@ -4975,7 +4975,7 @@ function showSlides(n) {
                             </div>
     
                     <div class="NA">
-                        New Foundland & La.d
+                        New Foundland & Lab
                         </div>
                 </div>
             </a>
