--- a/index.html
+++ b/index.html
@@ -3714,7 +3714,7 @@ background: #717171;
             justify-content: space-between;
             justify-items: center;
             width: auto;
-            column-gap: 0.25rem;
+            column-gap: 0.15rem;
             height: 430px;
             padding: 10px;
             background: transparent;
@@ -3727,8 +3727,8 @@ background: #717171;
 
 .NAME{
     display: grid;
-    grid-template-columns: 330px 290px 330px;
-    justify-content: center;
+    grid-template-columns: 315px 315px 315px;
+    justify-content: space-between;
     justify-items: center;
     width: auto;
     height: 270px;
@@ -3750,7 +3750,7 @@ background: #717171;
     padding: 10px;
     border: 0.11rem solid #d0d0d0ef;
     border-radius: 0.5rem;
-    background: rgba(194, 222, 231, 0.277);
+    background: rgba(194, 217, 231, 0.277);
 }
 
 .button{
