--- a/index.html
+++ b/index.html
@@ -2278,24 +2278,23 @@ height: auto;
     display: grid;
     grid-template-columns: 0.45fr 1fr;
     column-gap: 0.3rem;
-    background: rgba(217, 217, 217, 0.67);
+    background: -webkit-linear-gradient(#cb1b1b,#fb4747f4);
     display: grid;
     justify-content: space-between;
     justify-items: center;
     font-family: 'Merienda';
     font-size: 20px;
-    color:rgba(2, 72, 142, 0.895);
+    color: gold;
     width: 100%;
     height: 118px;
     padding: 10px;
-    border: 0.13rem solid rgba(81, 126, 163, 0.969);
-    border-left: 0.45rem solid rgba(86, 134, 173, 0.969);
-    border-right: 0.45rem solid rgba(86, 134, 173, 0.969);
+    border: 0.13rem solid rgb(0, 0, 0);
+    border-left: 0.45rem solid rgb(0, 0, 0);
+    border-right: 0.45rem solid rgb(0, 0, 0);
     box-shadow: -1px 2px 0.5rem 2px rgba(31, 105, 180, 0.906);
 }
 
 .DACA:hover{
-    background: -webkit-linear-gradient(#cb1b1b,#fb4747f4);
     box-shadow: 0 2px 1rem 3px rgba(15, 67, 119, 0.829);
     transition: 0.25s linear;
     color:#fff;
