--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(250, 250, 250, 0.958);
+            background-color: rgba(246, 246, 246, 0.923);
             justify-content: center;
             align-items: center;
         }
@@ -5548,10 +5548,10 @@ function showSlides(n) {
         Descartes high school in Ouagadougou. 
         He holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C [Brevet d'Etude du Premier Cycle].
         <br>
-        As a fervent defender of Disability Rights, Gabriel knew he has to stand up and get involved within activities about disablity and corollary matters by implementing his ideas of projects into practical achievements that can positively change lives. That's why he created the Centre PAAS NEERE for EDUCATION in 2006. Ideas are sometimes common even complexe and deep-thinking, but those linked frontally to disability and rights, are focal subjects of interest for Gabriel. 
+        As a fervent defender of Disability Rights, Gabriel knew he has to stand up and get involved within activities about disablity and corollary matters in implementing his ideas into practical realisations that can positively change lives. That's why he created the Centre PAAS NEERE for EDUCATION in 2006. Ideas are sometimes common even complexe and deep-thinking, but those linked frontally to disability and rights, are focal subjects of interest for Gabriel. 
          <br>
           <br>
-        The need to get results in terms of social impacts through communities where disabled people are living, was hugely a fuel and has sharpened the dynamism of Gabriel on his desire to make better lives for disabled children.
+        The need to get results in terms of social impacts through communities where disabled people are living, was a huge fuel and has sharpened the dynamism of Gabriel on his desire to make better lives for disabled children.
         This is a way to promote, defend and protect Disability Rights and legacies that disabled activists have achieved, especially the right to get educated and be normally health-carried no matter who you are.
    
     </p>
