--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             z-index: 1;
             top: 0;
             position: sticky;
+            justify-content: center;
             align-items: center;
             margin-top: -16px;
         }
@@ -146,7 +147,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.45rem 1.5px rgb(21, 62, 127);
+  box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
   border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
 }
 
@@ -221,7 +222,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.45rem 1.5px rgb(21, 62, 127);
+  box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
   border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
    }
 
@@ -297,7 +298,7 @@
   height: 155px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 3px 0.45rem 1.5px rgb(21, 62, 127);
+  box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
   border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
   }
 
@@ -373,7 +374,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 3px 0.45rem 1.5px rgb(21, 62, 127);
+  box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
   border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
         }
 
@@ -449,7 +450,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 3px 0.45rem 1.5px rgb(21, 62, 127);
+  box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
   border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
    }
 
@@ -526,7 +527,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 3px 0.45rem 1.5px rgb(21, 62, 127);
+  box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
   border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
    } 
 
@@ -604,7 +605,7 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  box-shadow: 0 3px 0.45rem 1.5px rgb(21, 62, 127);
+  box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
   border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
    }
 
@@ -682,7 +683,7 @@
   height: 158px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 3px 0.45rem 1.5px rgb(21, 62, 127);
+  box-shadow: 0 5px 0.45rem 2px rgb(16, 56, 119);
   border-top: 0.25rem solid rgba(58, 106, 236, 0.965);
   }
 
