--- a/index.html
+++ b/index.html
@@ -3866,7 +3866,7 @@ function showSlides(n) {
                     <div class="ttl-container">
                         <div class="t-container">
                             <div class="titlcontainer">
-                                <a href="https://www.fourwindfilms.com/frames" style="color: #000; font-size: 15px;" target="blank">
+                                <a href="https://www.fourwindfilms.com/frames" style="color: #000; font-size: 15px;" target="_blank">
                                 <b>Video </b>
                                 </a>
                             </div>
