--- a/index.html
+++ b/index.html
@@ -3880,7 +3880,7 @@ function showSlides(n) {
                     <div class="ttle-container">
                         <div class="tt-container">
                             <div class="titlecontainer">
-                                <a href="https://www.opensocietyfoundations.org/explainers/value-inclusive-education" target="blank">
+                                <a href="https://www.opensocietyfoundations.org/explainers/value-inclusive-education" target="_blank">
                                     <b>WHAT IS THE VALUE OF INCLUSIVE EDUCATION ? | Learn More...</b>
                                 </a>
                             </div>
