--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         .top-container {
             display: flex;
             position: relative;
-            background-color: rgb(244, 244, 244);
+            background-color: rgb(246, 246, 246);
             width: 100%;
             height: 80px;
             justify-content: center;
@@ -1052,7 +1052,7 @@
             position: relative;
             width: 20%;
             height: 79px;
-            background-color: rgb(244, 244, 244);
+            background-color: rgb(246, 246, 246);
             justify-content: center;
             align-items: center;
             margin-left: -1.31%; 
@@ -1063,7 +1063,7 @@
             position: relative;
             width: 79.6%;
             height: 79px;
-            background-color: rgb(244, 244, 244);
+            background-color: rgb(246, 246, 246);
             justify-content: center;
             align-items: center;
             margin-left: 7%; 
@@ -3565,7 +3565,7 @@ background: #717171;
         }
 
         .disabled{
-            background: #fff;
+            background: #fdfdfd;
             display: grid;
             grid-template-columns: 1fr;
             justify-content: center;
