--- a/index.html
+++ b/index.html
@@ -2226,7 +2226,9 @@ height: auto;
             line-height: 13px;
             background-color: #fff;
             margin-right: 32%;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            border: 0.13rem solid rgb(145, 145, 145);
+            box-shadow: 0 0 0.5rem 0.5px rgb(131, 131, 131);
+            border-radius: 0.4rem;
             margin-top: -0.35rem;
         }
 
@@ -2287,30 +2289,31 @@ height: auto;
     font-size: 20px;
     color: #000;
     width: 100%;
-    height: 118px;
+    height: 100px;
     padding: 10px;
-    border: 0.13rem solid rgb(0, 0, 0);
-    border-left: 0.45rem solid rgb(0, 0, 0);
-    border-right: 0.45rem solid rgb(0, 0, 0);
+    border: 0.2rem solid rgb(0, 0, 0);
+    border-left: 0.6rem solid rgb(0, 0, 0);
+    border-right: 0.6rem solid rgb(0, 0, 0);
     box-shadow: -1px 2px 0.5rem 2px rgba(31, 105, 180, 0.906);
 }
 
 .DACA:hover{
     box-shadow: 0 2px 1rem 3px rgba(15, 67, 119, 0.829);
-    transition: 0.25s linear;
+    transition: 0.26s linear;
     color:#fff;
     border: 0.18rem solid #000;
 }
 
 .DCA{
+    display: grid;
     justify-content: center;
-    align-items: center;
+    justify-items: center;
     width: auto;
     height: 10%;
 }
 .DCA img{
     width: 100px;
-    height: 90px;
+    height: 75px;
 }
 
 .DAC{
@@ -2453,7 +2456,9 @@ height: auto;
             justify-content: center;
             justify-items: center;
             background-color: transparent;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            border: 0.13rem solid rgb(145, 145, 145);
+            box-shadow: 0 0 0.5rem 0.5px rgb(131, 131, 131);
+            border-radius: 0.4rem;
             margin-top: -0.35rem;
         }
 
@@ -2499,7 +2504,7 @@ height: auto;
         }
 
         .contentw1 img:hover {
-            transform: scale(1.1);
+            transform: scale(1.06);
         }
 
         .contentt {
@@ -3297,9 +3302,9 @@ cursor: pointer;
             color: #000;
             line-height: 19.75px;
             padding: 7px;
-            border: 0.12rem solid #0353e7;
-            border-radius: 0.5rem;
-            box-shadow: 0 4px 0.5rem 2px rgb(1, 107, 247);
+            border: 0.14rem solid #a6a6a6;
+            border-radius: 0.25rem;
+            box-shadow: 0 2px 0.5rem 2px rgb(155, 155, 155);
         }
 
         .in-sidebar a:hover {
@@ -3362,9 +3367,9 @@ cursor: pointer;
             line-height: 18.5px;
             background: transparent;
             margin-top: -5px;
-            border: 0.12rem solid #0353e7;
-            border-radius: 0.5rem;
-            box-shadow: 0 4px 0.5rem 2px rgb(1, 107, 247);
+            border: 0.14rem solid #a6a6a6;
+            border-radius: 0.25rem;
+            box-shadow: 0 2px 0.5rem 2px rgb(155, 155, 155);
         }
 
         .explanation2:hover{
@@ -3641,7 +3646,7 @@ background: #717171;
             margin-top: 3.5rem;
             margin-bottom: 3.5rem;
             border-radius: 0.5rem;
-            background: #fdfdfdf3;
+            background-color: rgba(254, 254, 254, 0.923);
             border-top: 0.5rem solid rgba(110, 133, 204, 0.267);
             border-bottom: 0.5rem solid rgba(110, 133, 204, 0.267);
         }
@@ -3675,12 +3680,13 @@ background: #717171;
             justify-content: center;
             row-gap: 0.5rem;
             justify-items: center;
-            width: 84%;
-            height: 410px;
-            background: #fffefe;
+            width: 85%;
+            height: 435px;
+            background-color: rgba(249, 249, 249, 0.923);
             padding: 10px;
             border-radius: 0.5rem;
-            border-bottom: 0.5rem solid rgba(110, 133, 204, 0.267);
+            border-top: 0.25rem solid rgba(110, 133, 204, 0.267);
+            border-bottom: 0.25rem solid rgba(110, 133, 204, 0.267);
         }
         
         .Pro1{
@@ -3743,7 +3749,7 @@ background: #717171;
 
 .NAM{
     display: grid;
-    grid-auto-columns: 300px;
+    grid-auto-columns: 287px;
     justify-content: space-between;
     justify-items: center;
     column-gap: 0.2rem;
@@ -3752,7 +3758,7 @@ background: #717171;
     padding: 10px;
     border: 0.11rem solid #d0d0d0ef;
     border-radius: 0.5rem;
-    background: rgba(194, 217, 231, 0.277);
+    background: rgba(178, 213, 248, 0.547);
 }
 
 .button{
@@ -5671,15 +5677,15 @@ function showSlides(n) {
 
                         <h3>UNITED STATES OF AMERICA [USA]</h3>
                         
-                     M. Case (MA-USA / Melbourne-AUSTRALIA)
+                     M. Case (MA-USA / AUSTRALIA)
                     <br>
                     B. Drake (MA-USA)
                     <br>
-                     Mark & Kim CASE (NH-USA)
+                     Mrk & Km. CASE (NH-USA)
                     <br>
                      A. Owre (ME-USA)
                      <br>
-                     Ntl. Owre (ME-USA)
+                     N. Owre (ME-USA)
                      <br>
                      B. Owre (ME-USA)
                      <br>
