--- a/index.html
+++ b/index.html
@@ -2212,7 +2212,7 @@ height: auto;
 
         .content8:hover{    
         transition: 0.25s linear;
-        background: #fff;}
+        background: #fbfbfb;}
 
         .envelop {
             display: grid;
@@ -2226,9 +2226,9 @@ height: auto;
             line-height: 13px;
             background-color: #fff;
             margin-right: 32%;
-            border: 0.12rem solid rgb(196, 196, 196);
-            box-shadow: 0 0 0.5rem 0.5px rgb(183, 183, 183);
-            border-radius: 0.5rem;
+            border: 0.12rem solid rgb(197, 197, 197);
+            box-shadow: 0 0 0.5rem 0.5px rgb(190, 190, 190);
+            border-radius: 0.45rem;
             margin-top: -0.35rem;
         }
 
@@ -2456,9 +2456,9 @@ height: auto;
             justify-content: center;
             justify-items: center;
             background-color: transparent;
-            border: 0.12rem solid rgb(196, 196, 196);
-            box-shadow: 0 0 0.5rem 0.5px rgb(183, 183, 183);
-            border-radius: 0.5rem;
+            border: 0.12rem solid rgb(197, 197, 197);
+            box-shadow: 0 0 0.5rem 0.5px rgb(190, 190, 190);
+            border-radius: 0.45rem;
             margin-top: -0.35rem;
         }
 
@@ -2649,7 +2649,7 @@ height: auto;
             box-shadow: 0px -1px 0.4rem 0.5px rgba(200, 200, 200, 0.675);
             transition: 0.25s linear;
             padding: 5px;
-            background-color: #ffffff;
+            background-color: #f8f8f8;
         }
 
         .contenty {
