--- a/index.html
+++ b/index.html
@@ -5708,7 +5708,7 @@ function showSlides(n) {
                     
                       D. Turner & FNY (QC-CA)
                      <br>
-                     Michel Desrochers (QC-CA)
+                     M. Desrochers (QC-CA)
                      <br>
                      Carlos & Clau (QC-CA)
                      <br>
