--- a/index.html
+++ b/index.html
@@ -2267,7 +2267,7 @@ height: auto;
         .CANADA{
             display: grid;
             grid-template-rows: 1fr 1fr;
-            row-gap: 1rem; 
+            row-gap: 1.5rem; 
             width: 84%;
             height: 480px;
             padding: 20px;
@@ -2291,6 +2291,7 @@ height: auto;
     width: 100%;
     height: 100px;
     padding: 10px;
+    margin-top: 0.75rem;
     border: 0.2rem solid rgb(0, 0, 0);
     border-left: 0.6rem solid rgb(0, 0, 0);
     border-right: 0.6rem solid rgb(0, 0, 0);
