--- a/index.html
+++ b/index.html
@@ -3736,7 +3736,7 @@ background: #717171;
 
 .NAME{
     display: grid;
-    grid-template-columns: 315px 315px 315px;
+    grid-template-columns: 322px 322px 322px;
     justify-content: space-between;
     justify-items: center;
     width: auto;
@@ -3750,10 +3750,10 @@ background: #717171;
 
 .NAM{
     display: grid;
-    grid-auto-columns: 287px;
+    grid-template-columns: 298px;
     justify-content: space-between;
     justify-items: center;
-    column-gap: 0.2rem;
+    column-gap: 0.1rem;
     height: auto;
     width: auto;
     padding: 10px;
