--- a/index.html
+++ b/index.html
@@ -1929,7 +1929,7 @@ height: auto;
             justify-content: space-between;
             justify-items: center;
             width: 100%;
-            height: auto;
+            height: 40px;
             
         }
 
@@ -1940,12 +1940,13 @@ height: auto;
             justify-items: center;
             background: #f0f0f0;
             width: 80px;
-            height: auto;
+            height: 25px;
             padding: 2px;
-            border: 0.12rem solid crimson;
+            border: 0.12rem solid rgb(234, 48, 85);
             border-radius: 0.25rem;
             color: #000;
             font-family: arial;
+            margin-top: -0.5rem;
         }
 
         .Cli:hover{
@@ -2439,8 +2440,7 @@ height: auto;
             justify-content: center;
             align-items: center;
             width: 270px;
-            height: 38px;
-            border-bottom: 1px solid rgba(204, 204, 204, 0.963) !important;
+            height: 35px;
             border-radius: 2px;
             font-family: georgia;
             font-size: 22px;
@@ -2517,8 +2517,9 @@ height: auto;
             justify-content: center;
             justify-items: center;
             width: 365px;
-            height: 300px;
+            height: 290px;
             padding: 20px;
+            background: #fff;
         }
 
         .contentte {
@@ -3282,7 +3283,6 @@ cursor: pointer;
             font-size: 25px;
             color: rgb(255, 178, 34);
             border-radius: 7px;
-            border: 0.5px solid #fff;
             padding: 1px;
             box-shadow: 0px 0px 10px 2px rgba(184, 184, 184, 0.765);
             margin-top: 2px;
@@ -3297,15 +3297,15 @@ cursor: pointer;
             text-align: center;
             width: 315px;
             height: 525px;
-            background: transparent;
+            background: #fff;
             font-size: 15.4px;
             font-family: 'Merienda';
             color: #000;
             line-height: 19.75px;
             padding: 7px;
-            border: 0.14rem solid #a6a6a6;
-            border-radius: 0.25rem;
-            box-shadow: 0 2px 0.5rem 2px rgb(155, 155, 155);
+            border: 0.14rem solid #c2c2c2d7;
+            border-radius: 0.5rem;
+            box-shadow: 0 2px 0.45rem 2px rgb(203, 203, 203);
         }
 
         .in-sidebar a:hover {
@@ -3320,7 +3320,8 @@ cursor: pointer;
         }
 
         .immi{
-            background: #fff;
+            background: transparent;
+            height: 600px;
         }
 
         .explanation {
@@ -3335,7 +3336,7 @@ cursor: pointer;
             width: 405px;
             height: 590px;
             padding: 10px;
-            background: #fff;
+            background: transparent;
         }
 
         .explanation1 {
@@ -3349,7 +3350,6 @@ cursor: pointer;
             font-size: 22px;
             color: rgba(39, 39, 39, 0.729);
             padding: 2px;
-            border-bottom: 0.5px solid rgba(142, 142, 142, 0.335);
         }
 
         .explanation2 {
@@ -3366,11 +3366,11 @@ cursor: pointer;
             font-size: 16px;
             text-align: justify;
             line-height: 18.5px;
-            background: transparent;
+            background: #fff;
             margin-top: -5px;
-            border: 0.14rem solid #a6a6a6;
-            border-radius: 0.25rem;
-            box-shadow: 0 2px 0.5rem 2px rgb(155, 155, 155);
+            border: 0.14rem solid #c2c2c2d7;
+            border-radius: 0.5rem;
+            box-shadow: 0 2px 0.45rem 2px rgb(203, 203, 203);
         }
 
         .explanation2:hover{
@@ -3560,8 +3560,8 @@ background: #717171;
             width: 100%;
             padding: 5px;
             height: 45px;
-            font-family: 'Merienda';
-            font-size: 16px;
+            font-family: 'Kanit';
+            font-size: 18.5px;
             border-radius: 0.25rem;
             margin-top: -1.5rem;
         }
@@ -3577,12 +3577,13 @@ background: #717171;
             justify-content: center;
             justify-items: center;
             color:#18a5d8fa;
-            font-size: 19px;
+            font-size: 20.5px;
             font-family: 'arial black';
             width: 100%;
             height: 45px;
             padding: 10px;
             cursor: pointer;
+            border-radius: 0.5rem;
         }
 
         .disabled:hover{
@@ -3613,9 +3614,9 @@ background: #717171;
             justify-content: center;
             justify-items: center;
             background: rgb(189, 188, 188); 
-            font-family: 'Merienda'; 
+            font-family: 'Kanit'; 
             font-size: 22px; 
-            color: #4b4b4b; 
+            color: #505050; 
             width: 180px; 
             height: 50px;
             padding: 10px;
@@ -3662,8 +3663,8 @@ background: #717171;
             height: auto;
             padding: 7px;
             border: none;
-            font-size: 17px;
-            color: rgb(38, 71, 152);
+            font-size: 14px;
+            color: rgb(44, 78, 164);
             word-spacing: 1px;
             line-height: 24px;
             margin-top: 0.55rem;
@@ -3743,9 +3744,6 @@ background: #717171;
     height: 270px;
     padding: 10px;
     color: rgb(9, 23, 148);
-    font-size: 15.25px;
-    line-height: 22px;
-    font-family: 'Kanit';
 }
 
 .NAM{
@@ -3754,6 +3752,9 @@ background: #717171;
     justify-content: space-between;
     justify-items: center;
     column-gap: 0.1rem;
+    font-size: 14px;
+    line-height: 22px;
+    font-family: 'Kanit';
     height: auto;
     width: auto;
     padding: 10px;
@@ -4298,8 +4299,8 @@ function showSlides(n) {
                         <div class="Clim1">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
-                            <b>Climate Change Is a Big Threat To Human-Beings And To Earth. It is Deadly Causing Floodings, Wildfires, Droughts, Earthquakes And Volcanos Around The World. It Is Undoubtely Clear That Climate Change Has More Endangered Earth Than Never Before. 
-                                But Human-Being Has Provoked It Through His Ceaseless Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Danger [Threat].
+                            <b>Climate Change Is a Big Threat To Earth And Consequently To Human-Beings. It is Deadly Causing Floodings, Wildfires, Droughts, Earthquakes, Volcanos Around The World And Obviously Forcing People Migrations. It Is Undoubtely Clear That Climate Change Has More Endangered Earth Than Never Before. 
+                                But Human-Being Has Provoked It Through His Ceaseless Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Increasing Danger [Threat].
                             </b> 
                         <br> 
                         <b style="font-family: arial; color:#000; font-size: 13.5px;">Climate Change has neither been a story nor a comedy. It's a mad reality.
@@ -4357,9 +4358,9 @@ function showSlides(n) {
                     <div class="k-imagek6">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
-                            <b>Disability Is Not Destiny. But For Disabled People Living In Exclusive Areas, They
+                            <b>Disability Is Not Destiny. But For Some People Living With Disabilities In Exclusive Areas, They
                                 Have To Struggle At Least Two Times Harder Than Anyone To Get Their Needs Or To Achieve.
-                                They are experiencing Toxic And Non-Inclusive Environments Favored By Discriminations.</b> </p>
+                                They are experiencing Toxic And Non-Inclusive Environments Favored By Discriminations In Their Communities.</b> </p>
                                 <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;">As a disabled person, I experienced
                             and still experiencing lots <b>discriminations</b> everywhere. It's too tough, heartbreaking and challenging but It's also learning . I
                             have to find out a way to get my rights respected
@@ -4386,10 +4387,10 @@ function showSlides(n) {
                     <div class="k-imagek7">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
-                            <b>Culture Is Like A Backbone For Communities To Survive In The Biggest Family Of Diversity. It's A Way To
-                                Promote And Preserve Cultural Identity From Elders [Grand-Parents and Parents] To Kids or
-                                To Grand-Sons. Everyone Is Playing A Key Role Of Transmission In Order To
-                                Strongly Preserve It</b> </p>
+                            <b>Culture Is A Backbone For Communities To Survive Into A Biggest Family Of Diversity in the Era Of Globalisation. It's A Way Of Promotion 
+                                 And Preservation Of A Cultural Identity, A Legacy From Ancestors [Grand-Parents and Parents] To Their Descents
+                                Where Everyone Is Playing A Key Role Of Transmission In Order To
+                                Strongly Preserve Their Culture</b> </p>
                                 <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"> <b>FESTIMA</b> is a festival of masks and arts that happening every year in Dedougou, a city located in the western region of Burkina Faso. It features how mask has deeply anchored in the traditions and culture of the area and in Sub-African countries.
                             </p>
                     </div>
