--- a/index.html
+++ b/index.html
@@ -1569,7 +1569,7 @@
             background-color: #ffffffec;
             width: 84%;
             height: 285px;
-            font-family: 'georgia';
+            font-family: 'Kanit';
             color: rgb(82, 82, 82);
             font-size: 22px;
             line-height: 15px;
@@ -1602,7 +1602,7 @@
             justify-content: center;
             justify-items: center;
             background: transparent;
-            font-family: georgia;
+            font-family: 'Kanit';
             text-align: center;
             width: 334px;
             height: 245px;
@@ -1624,7 +1624,7 @@
             justify-items: center;
             background: transparent;
             height: 260px;
-            font-family: arial;
+            font-family: 'Kanit';
             text-align: left;
             font-size: 18px;
             line-height: 23px;
@@ -1641,7 +1641,7 @@
             background-color: #ffffffec;
             width: 84%;
             height: 297px;
-            font-family: 'georgia';
+            font-family: 'Kanit';
             color: rgb(82, 82, 82);
             font-size: 22px;
             line-height: 15px;
@@ -1673,7 +1673,7 @@
             justify-content: center;
             justify-items: center;
             background: transparent;
-            font-family: georgia;
+            font-family: 'Kanit';
             width: auto;
             height: 245px;
             width: 334px;
@@ -1696,7 +1696,7 @@
             justify-items: center;
             background: transparent;
             height: 260px;
-            font-family: arial;
+            font-family: 'Kanit';
             font-size: 18px;
             line-height: 23px;
             text-align: left;
@@ -1713,7 +1713,7 @@
             background-color: #ffffffec;
             width: 84%;
             height: 286px;
-            font-family: 'georgia';
+            font-family: 'Kanit';
             color: rgb(82, 82, 82);
             font-size: 22px;
             line-height: 15px;
@@ -1748,7 +1748,7 @@
             background: transparent;
             text-align: left;
             height: 260px;
-            font-family: arial;
+            font-family: 'Kanit';
             font-size: 18px;
             line-height: 23px;
             padding-right: 5px;
@@ -1762,7 +1762,7 @@
             justify-content: center;
             justify-items: center;
             background: transparent;
-            font-family: georgia;
+            font-family: 'Kanit';
             width: 334px;
             text-align: center;
             height: 245px;
@@ -1783,7 +1783,7 @@
             width: 84%;
             height: 290px;
             background-color: #ffffffec;
-            font-family: 'georgia';
+            font-family: 'Kanit';
             color: rgb(82, 82, 82);
             font-size: 22px;
             line-height: 15px;
@@ -1817,7 +1817,7 @@
             justify-items: center;
             background: transparent;
             height: 260px;
-            font-family: arial;
+            font-family: 'Kanit';
             font-size: 18px;
             line-height: 23px;
             text-align: left;
@@ -1832,7 +1832,7 @@
             justify-content: center;
             justify-items: center;
             background: transparent;
-            font-family: georgia;
+            font-family: 'Kanit';
             text-align: center;
             width: 334px;
             height: 245px;
@@ -1853,7 +1853,7 @@
             background-color: #ffffffec;
             width: 84%;
             height: 300px;
-            font-family: 'georgia';
+            font-family: 'Kanit';
             color: rgb(82, 82, 82);
             font-size: 22px;
             line-height: 15px;
@@ -1902,7 +1902,7 @@
             justify-content: center;
             justify-items: center;
             background: transparent;
-            font-family: georgia;
+            font-family: 'Kanit';
             width: 334px;
             text-align: center;
             height: 245px;
@@ -1964,7 +1964,7 @@ height: auto;
             background-color: #ffffffec;
             width: 84%;
             height: 298px;
-            font-family: 'georgia';
+            font-family: 'Kanit';
             color: rgb(82, 82, 82);
             font-size: 22px;
             text-align: left;
@@ -1998,7 +1998,7 @@ height: auto;
             justify-items: center;
             background: transparent;
             height: 260px;
-            font-family: arial;
+            font-family: 'kanit';
             font-size: 18px;
             line-height: 23px;
             text-align: left;
@@ -2013,7 +2013,7 @@ height: auto;
             justify-content: center;
             justify-items: center;
             background: transparent;
-            font-family: georgia;
+            font-family: 'kanit';
             text-align: center;
             width: 334px;
             height: 245px;
@@ -2034,7 +2034,7 @@ height: auto;
             background-color: #ffffffec;
             width: 84%;
             height: 295px;
-            font-family: 'georgia';
+            font-family: 'Kanit';
             color: rgb(82, 82, 82);
             font-size: 22px;
             line-height: 15px;
@@ -2068,7 +2068,7 @@ height: auto;
             justify-items: center;
             background: transparent;
             height: 260px;
-            font-family: arial;
+            font-family: 'Kanit';
             font-size: 18px;
             line-height: 23px;
             text-align: left;
@@ -2104,7 +2104,7 @@ height: auto;
             background-color: #ffffff;
             width: 84%;
             height: 250px;
-            font-family: 'georgia';
+            font-family: 'Kanit';
             color: rgb(82, 82, 82);
             font-size: 22px;
             line-height: 25px;
@@ -2197,7 +2197,7 @@ height: auto;
             background-color: rgba(245, 242, 242, 0.939);
             width: 84%;
             height: 630px;
-            font-family: 'georgia';
+            font-family: 'Kanit';
             color: rgb(82, 82, 82);
             font-size: 22px;
             line-height: 30px;
@@ -2242,7 +2242,7 @@ height: auto;
             height: 38px;
             border-bottom: 0.2px solid rgba(216, 216, 216, 0.963) !important;
             border-radius: 2px;
-            font-family: georgia;
+            font-family: 'Kanit';
             font-size: 22px;
             color: rgba(39, 39, 39, 0.729);
             padding: 2px;
@@ -2430,6 +2430,7 @@ height: auto;
             justify-content: center;
             justify-items: center;
             padding: 10px;
+            height: 600px;
             background-color: transparent;
             border-right: 1px solid rgba(204, 204, 204, 0.963) !important;
         }
@@ -2442,7 +2443,7 @@ height: auto;
             width: 270px;
             height: 35px;
             border-radius: 2px;
-            font-family: georgia;
+            font-family: 'Kanit';
             font-size: 22px;
             color: rgba(39, 39, 39, 0.729);
             padding: 2px;
@@ -2482,7 +2483,7 @@ height: auto;
             align-items: center;
             width: 360.5px;
             height: 38px;
-            font-family: 'georgia';
+            font-family: 'Kanit';
             font-size: 22px;
             line-height: 10px;
             border-bottom: 0.2px solid rgba(208, 208, 208, 0.862) !important;
@@ -2871,11 +2872,11 @@ cursor: pointer;
 
         .content2y {
             width: 249px;
-            height: 40px;
+            height: 38px;
             text-align: center;
-            font-family: verdana;
-            font-size: 14px;
-            margin-top: -0.8rem;
+            font-family: 'Kanit';
+            font-size: 13px;
+            margin-top: -1.15rem;
             margin-left: -2px;
 
         }
@@ -3319,10 +3320,6 @@ cursor: pointer;
             color: blue;
         }
 
-        .immi{
-            background: transparent;
-            height: 600px;
-        }
 
         .explanation {
             display: grid;
@@ -3346,7 +3343,7 @@ cursor: pointer;
             align-items: center;
             width: 305px;
             height: 38px;
-            font-family: georgia;
+            font-family: 'Kanit';
             font-size: 22px;
             color: rgba(39, 39, 39, 0.729);
             padding: 2px;
@@ -3360,12 +3357,12 @@ cursor: pointer;
             column-gap: 5px;
             width: 325px;
             height: 525px;
-            padding: 10px;
-            font-family: 'Barlow Condensed', sans-serif;
-            color: #161616;
-            font-size: 16px;
+            padding: 14px;
+            font-family: 'Kanit';
+            color: #111111;
+            font-size: 12.45px;
             text-align: justify;
-            line-height: 18.5px;
+            line-height: 18.4px;
             background: #fff;
             margin-top: -5px;
             border: 0.14rem solid #c2c2c2d7;
@@ -3374,7 +3371,7 @@ cursor: pointer;
         }
 
         .explanation2:hover{
-            color: darkblue;
+            color: rgb(18, 18, 137);
             background: #fff ;
         }
 
@@ -3387,6 +3384,7 @@ cursor: pointer;
             background-color: rgba(0, 0, 0, 0.942);
             width: 84%;
             height: 570px;
+            font-family: 'Kanit';
             padding-top: 5px;
             padding-bottom: 5px;
             box-shadow: 0 0 0.3rem 1px #000;
@@ -3663,11 +3661,11 @@ background: #717171;
             height: auto;
             padding: 7px;
             border: none;
-            font-size: 14px;
+            font-size: 14.2px;
             color: rgb(44, 78, 164);
             word-spacing: 1px;
-            line-height: 24px;
-            margin-top: 0.55rem;
+            line-height: 22px;
+            margin-top: 0.5rem;
             
         }
 
@@ -4726,7 +4724,7 @@ function showSlides(n) {
 
                         <div class="contentyy2">
                             <div class="content2y">
-                                <h4>Welcome in Burkina Faso</h4>
+                                <h3>Welcome in Burkina Faso</h3>
                             </div>
                             <div class="content2y2">
                                 <p>
